# hummingbot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
hummingbot/connector/: markets_recorder.py
hummingbot/funding_arbitrage/: fixed_market_specs.py  position_metrics.py
hummingbot/model/: executors.py  funding_payment.py  funding_trade.py
hummingbot/strategy_v2/executors/arbitrage_executor/: arbitrage_executor.py
hummingbot/strategy_v2/models/: executors.py  executors_info.py
scripts/: v2_funding_rate_arb.py  v2_usdt_usdc_funding_arb.py
scripts/funding_arbitrage/: CustomArbitrageExecutor.py  FundingTrade.py  PositionMetrics.py  SingleExchangePerpPerpController.py  fixed_market_specs.py
scripts/qa_testing/: IntegrationTestArbitrageExecutorController.py
setup/: environment.yml  environment_dydx.yml
test/funding_arbitrage/: test_fixed_market_specs.py  test_funding_trade.py  test_position_metrics.py
test/hummingbot/connector/: test_markets_recorder.py
test/hummingbot/strategy_v2/executors/arbitrage_executor/: test_arbitrage_executor.py
