#
#  I commented out these lint/formatter tools because I'll be using ruff for all of it.
#  Also commented out git hooks to run those tools.
#

# [tool.black]
# line-length = 120
# include = '\.pyi?$'
# exclude = '''
# /(
#     \.git
#   | \.hg
#   | \.mypy_cache
#   | \.tox
#   | \.venv
#   | _build
#   | buck-out
#   | build
#   | dist
# )/
# '''

[build-system]
requires = ["setuptools", "wheel", "numpy==1.26.4", "cython==3.0.0a10"]

# [tool.isort]
# line_length = 120
# multi_line_output = 3
# include_trailing_comma = true
# use_parentheses = true
# ensure_newline_before_comments = true
# combine_as_imports = true
# conda_env = "hummingbot"
# filter_files = true
# skip = ["setup.py"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E251", "E501", "E702"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"hummingbot/**/*.pyx" = ["E225", "E226", "E251", "E999"]
"hummingbot/**/*.pxd" = ["E225", "E226", "E251", "E999"]
"test/**/*.pyx" = ["E225", "E226", "E251", "E999"]
"test/**/*.pxd" = ["E225", "E226", "E251", "E999"]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]



